<resources>
    <string name="app_name">Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="title_capstone">Capstone</string>
    <string name="title_reader">XYZ Reader</string>
    <string name="title_bigger">Build It Bigger</string>
    <string name="title_superDuo_library">Library App</string>
    <string name="title_superDuo_scores">Scores App</string>
    <string name="title_streamer">Spotify Streamer</string>
</resources>
