<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#E0F7FA">

    <TextView
        android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView"
        android:minHeight="@dimen/abc_action_button_min_height_material"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_streamer"
        android:id="@+id/btnStreamer"
        android:layout_below="@+id/textView"
        android:background="#64B5F6"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_superDuo_scores"
        android:id="@+id/btnScores"
        android:layout_below="@+id/btnStreamer"
        android:background="#64B5F6"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_superDuo_library"
        android:id="@+id/btnLib"
        android:layout_below="@+id/btnScores"
        android:background="#64B5F6"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_bigger"
        android:id="@+id/btnBigger"
        android:layout_below="@+id/btnLib"
        android:background="#64B5F6"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_reader"
        android:id="@+id/btnReader"
        android:layout_below="@+id/btnBigger"
        android:background="#64B5F6"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_capstone"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnReader"
        android:background="#64B5F6"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

</RelativeLayout>
